[gd_scene load_steps=3 format=2]

[ext_resource path="res://game/entities/entities/assets/SpritesSheet_Entity.png" type="Texture" id=1]
[ext_resource path="res://game/entities/entities/Log.gd" type="Script" id=2]

[node name="Log" type="Node2D"]
script = ExtResource( 2 )

[node name="SpriteStart" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 32, 16, 16 )

[node name="SpriteMedium" type="Sprite" parent="."]
position = Vector2( 24, 0 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 16, 32, 32, 16 )

[node name="SpriteEnd" type="Sprite" parent="."]
position = Vector2( 48, 0 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 64, 32, 16, 16 )

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
